[gd_scene load_steps=3 format=3 uid="uid://cs1vmfcrtxu06"]

[ext_resource type="Script" uid="uid://4cmcfv6vr1j1" path="res://ui/shop_screen.gd" id="1_4kj2c"]
[ext_resource type="PackedScene" uid="uid://cu0l4x28nikl" path="res://ui/shop_item.tscn" id="1_b85yj"]

[node name="ShopScreen" type="Control" groups=["shop_screen"]]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
script = ExtResource("1_4kj2c")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ExpandRight" type="Control" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.4

[node name="Content" type="Control" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/Content"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="LabelContainer" type="PanelContainer" parent="HBoxContainer/Content/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/Content/VBoxContainer/LabelContainer"]
layout_mode = 2
text = "Shop"
horizontal_alignment = 1

[node name="ShopContentContainer" type="PanelContainer" parent="HBoxContainer/Content/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="HBoxContainer/Content/VBoxContainer/ShopContentContainer"]
layout_mode = 2

[node name="ShopItems" type="VBoxContainer" parent="HBoxContainer/Content/VBoxContainer/ShopContentContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ShopItem" parent="HBoxContainer/Content/VBoxContainer/ShopContentContainer/ScrollContainer/ShopItems" instance=ExtResource("1_b85yj")]
layout_mode = 2

[node name="ShopItem2" parent="HBoxContainer/Content/VBoxContainer/ShopContentContainer/ScrollContainer/ShopItems" instance=ExtResource("1_b85yj")]
layout_mode = 2

[node name="ShopItem3" parent="HBoxContainer/Content/VBoxContainer/ShopContentContainer/ScrollContainer/ShopItems" instance=ExtResource("1_b85yj")]
layout_mode = 2

[node name="ShopItem4" parent="HBoxContainer/Content/VBoxContainer/ShopContentContainer/ScrollContainer/ShopItems" instance=ExtResource("1_b85yj")]
layout_mode = 2

[node name="ShopItem5" parent="HBoxContainer/Content/VBoxContainer/ShopContentContainer/ScrollContainer/ShopItems" instance=ExtResource("1_b85yj")]
layout_mode = 2

[node name="ShopItem6" parent="HBoxContainer/Content/VBoxContainer/ShopContentContainer/ScrollContainer/ShopItems" instance=ExtResource("1_b85yj")]
layout_mode = 2

[node name="ShopItem7" parent="HBoxContainer/Content/VBoxContainer/ShopContentContainer/ScrollContainer/ShopItems" instance=ExtResource("1_b85yj")]
layout_mode = 2

[node name="ShopItem8" parent="HBoxContainer/Content/VBoxContainer/ShopContentContainer/ScrollContainer/ShopItems" instance=ExtResource("1_b85yj")]
layout_mode = 2

[node name="ShopItem9" parent="HBoxContainer/Content/VBoxContainer/ShopContentContainer/ScrollContainer/ShopItems" instance=ExtResource("1_b85yj")]
layout_mode = 2

[node name="ShopItem10" parent="HBoxContainer/Content/VBoxContainer/ShopContentContainer/ScrollContainer/ShopItems" instance=ExtResource("1_b85yj")]
layout_mode = 2

[node name="ExpandLeft" type="Control" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.4
